manifests/01-manual-ab/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ab-demo
  labels:
    istio-injection: enabled
