manifests/01-manual-ab/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: ab-demo
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 8000
    targetPort: 8000
    name: http
